Spacing fixes

--- a/assets/stylesheets/kitten/molecules/footer/_footer.scss
+++ b/assets/stylesheets/kitten/molecules/footer/_footer.scss
@@ -42,9 +42,12 @@
 
   .k-Footer__brand__text {
     max-width: 12rem;
-    margin: 1rem auto; // text is centered
+    margin: k-px-to-rem(26px) auto k-px-to-rem(30px); // text is centered
+    line-height: 1.4;
 
     @include k-media-min('l') {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
       margin-left: 0; // text is left-aligned
     }
   }
@@ -63,6 +66,8 @@
   }
 
   .k-Footer__nav__links {
+    margin-top: 0;
+
     @include k-grid-col(12);
 
     @include k-media-min('m') {
@@ -98,7 +103,7 @@
     }
 
     @include k-typographyFont('source-sans-light');
-    @include k-typographyFontSize(-1);
+    @include k-typographyFontSize(-1, 1.4);
   }
 
   .k-Footer__logos__list {
@@ -119,8 +124,8 @@
   }
 
   .k-Footer__copyright {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 
     align-self: flex-end;
 
@@ -129,6 +134,8 @@
 
     @include k-grid-col(12);
     @include k-media-min('l') {
+      padding-bottom: k-px-to-rem(21px);
+
       @include k-grid-col(4);
       text-align: right;
     }
@@ -137,14 +144,21 @@
   .k-Footer__logo__img {
     // minimum height and aligns the logos vertically
     line-height: 4rem;
-    margin-bottom: 1rem;
+
+    margin-bottom: k-px-to-rem(10px);
 
     > img,
     > svg {
       vertical-align: middle;
     }
 
+
     @include k-media-min('l') {
+      > img,
+      > svg {
+        vertical-align: top;
+      }
+
       margin-bottom: 0;
       margin-right: 1rem;
     }
