--- a/assets/stylesheets/kitten/molecules/links/_link-list.scss
+++ b/assets/stylesheets/kitten/molecules/links/_link-list.scss
@@ -32,7 +32,7 @@
   }
 
   .k-LinkList__item {
-    margin: k-px-to-rem(10px) 0;
+    margin: 0 0 k-px-to-rem(10px) 0;
   }
 
   .k-LinkList__link {
